Bug 252677 - Add a Debug view breadcrumb to show and select the active debug context.

--- a/org.eclipse.debug.ui/plugin.xml
+++ b/org.eclipse.debug.ui/plugin.xml
@@ -1236,7 +1236,7 @@
                icon="$nl$/icons/full/elcl16/copy_edit_co.gif"
                definitionId="org.eclipse.ui.edit.copy"
                helpContextId="copy_to_clipboard_action_context"
-               class="org.eclipse.debug.internal.ui.viewers.model.VirtualCopyToClipboardActionDelegate"
+               class="org.eclipse.debug.internal.ui.views.launch.LaunchViewCopyToClipboardActionDelegate"
                menubarPath="editGroup"
                id="org.eclipse.debug.ui.debugview.popupMenu.copyToClipboard">
          </action>
