--- a/org.eclipse.debug.ui/ui/org/eclipse/debug/internal/ui/DebugUIMessages.properties
+++ b/org.eclipse.debug.ui/ui/org/eclipse/debug/internal/ui/DebugUIMessages.properties
@@ -8,6 +8,7 @@
 # Contributors:
 #     IBM Corporation - initial API and implementation
 #     Wind River Systems - Ted Williams - [Memory View] Memory View: Workflow Enhancements (Bug 215432)
+#     Remy Chi Jian Suen - Make WorkingDirectoryBlock from JDT a Debug API class (Bug 221973)
 ###############################################################################
 
 DebugUIPlugin_23=Build in Progress
@@ -220,3 +221,20 @@ ViewPaneOrientationAction_2=Vertical Orientation
 ViewPaneOrientationAction_3=Vertical Orientation
 AbstractDebugCheckboxSelectionDialog_0=&Select All
 AbstractDebugCheckboxSelectionDialog_1=&Deselect All
+
+##############################################################
+# Blocks
+##############################################################
+
+WorkingDirectoryBlock_4=Select a &workspace relative working directory:
+WorkingDirectoryBlock_7=Select a working directory for the launch configuration:
+WorkingDirectoryBlock_0=W&orkspace...
+WorkingDirectoryBlock_Working_Directory_8=Working Directory
+WorkingDirectoryBlock_10=Working directory does not exist
+WorkingDirectoryBlock_12=Working directory:
+WorkingDirectoryBlock_17=Variabl&es...
+WorkingDirectoryBlock_18=Defa&ult:
+WorkingDirectoryBlock_19=Ot&her:
+WorkingDirectoryBlock_20=Working directory not specified
+WorkingDirectoryBlock_1=&File System...
+WorkingDirectoryBlock_Exception_occurred_reading_configuration___15=Exception occurred reading configuration:
