Bug 263057 Provide a workbench app that can be used to launch e4

--- a/bundles/org.eclipse.e4.ui.workbench/plugin.xml
+++ b/bundles/org.eclipse.e4.ui.workbench/plugin.xml
@@ -73,5 +73,18 @@
             class="org.eclipse.e4.workbench.ui.renderers.swt.StackModelFactory">
       </factory>
    </extension>
+   <extension
+         id="application"
+         name="Workbench Application"
+         point="org.eclipse.core.runtime.applications">
+      <application
+            cardinality="singleton-global"
+            thread="main"
+            visible="true">
+         <run
+               class="org.eclipse.e4.workbench.ui.internal.WorkbenchApplication">
+         </run>
+      </application>
+   </extension>
 
 </plugin>
