Getting rid of photo demo specific application class. See bug 263057

--- a/examples/org.eclipse.e4.demo.e4photo/plugin.xml
+++ b/examples/org.eclipse.e4.demo.e4photo/plugin.xml
@@ -64,6 +64,10 @@
                name="appName"
                value="e4 photo demo">
          </property>
+         <property
+               name="applicationXMI"
+               value="org.eclipse.e4.demo.e4photo/Application.xmi">
+         </property>
       </product>
    </extension>
 
