Bug 259442 - [Debug] Add a Copy/Paste context menu in the "Add watch expression" window https://bugs.eclipse.org/bugs/show_bug.cgi?id=259442

--- a/org.eclipse.debug.ui/ui/org/eclipse/debug/internal/ui/actions/ActionMessages.properties
+++ b/org.eclipse.debug.ui/ui/org/eclipse/debug/internal/ui/actions/ActionMessages.properties
@@ -113,6 +113,9 @@ WatchExpressionDialog_1=Add Watch Expression
 WatchExpressionDialog_2=E&xpression:
 WatchExpressionDialog_3=&Enable
 WatchExpressionDialog_4=Expression must not be empty
+WatchExpressionDialogMenu_0=Cut
+WatchExpressionDialogMenu_1=Copy
+WatchExpressionDialogMenu_2=Paste
 WatchAction_0=Error creating watch
 WatchAction_1=An exception occurred while attempting to create watch item.
 SkipAllBreakpointsAction_0=Skip All Breakpoints
