Fix for Bug 263187 [CSS] Add CSS support to photo demo

--- a/examples/org.eclipse.e4.demo.e4photo/plugin.xml
+++ b/examples/org.eclipse.e4.demo.e4photo/plugin.xml
@@ -68,6 +68,10 @@
                name="applicationXMI"
                value="org.eclipse.e4.demo.e4photo/Application.xmi">
          </property>
+         <property
+               name="applicationCSS"
+               value="platform:/plugin/org.eclipse.e4.demo.e4photo/css/e4photo.css">
+         </property>
       </product>
    </extension>
 
