bug 261865    [CommonNavigator] Drag from Project Explorer to Package Explorer gets "assertion failed" bug 258017 	[CommonNavigator] Project Explorer drop feedback gets stuck at "blocked" bug 261060 	[CommonNavigator] Java EE perspective drag drop src folder onto its own project deletes src folder bug 224016 	[DND][CommonNavigator] Drag to Project Explorer ignored after Drag from it bug 263618 	[CommonNavigator] Wrong DnD feedback when coming from outside bug 191918 	[DND][CommonNavigator] No update after drag and drop of file to external target bug 242265 	[CommonNavigator] [JFace] Common Navigator validateDrop needs DropTargetEvent bug 150688 	[CommonNavigator] Expose the ability for CommonDropAdapterAssistants to select feedback

--- a/tests/org.eclipse.ui.tests.navigator/plugin.xml
+++ b/tests/org.eclipse.ui.tests.navigator/plugin.xml
@@ -202,6 +202,29 @@
          </enablement>
       </actionProvider>
       <navigatorContent 
+            id="org.eclipse.ui.tests.navigator.testDropCopy" 
+            contentProvider="org.eclipse.ui.internal.navigator.resources.workbench.ResourceExtensionContentProvider"
+   			labelProvider="org.eclipse.ui.internal.navigator.resources.workbench.ResourceExtensionLabelProvider"			
+            name="Change drop to copy (from move)"
+            priority="highest">
+         <enablement>
+            <adapt
+                  type="org.eclipse.core.resources.IResource">
+            </adapt>
+         </enablement>
+         <dropAssistant
+               class="org.eclipse.ui.tests.navigator.extension.TestCopyDropAssistant"
+               id="testCopyDropAssistant">
+           <possibleDropTargets>
+              <or>
+                 <adapt type="org.eclipse.core.resources.IProject"/>
+                 <adapt type="org.eclipse.core.resources.IFolder"/>
+                 <adapt type="org.eclipse.core.resources.IFile"/>
+              </or>
+           </possibleDropTargets>
+         </dropAssistant> 
+	  </navigatorContent>      
+      <navigatorContent 
             id="org.eclipse.ui.tests.navigator.testHasChildren" 
             name="Dat File Content Extension"
             contentProvider="org.eclipse.ui.tests.navigator.extension.DatContentProvider"
