bug 185569 [CommonNavigator] CommonDragAdapter should provide ways for CommonDragAdapterAssistant to perform clean up after drag has finished bug 223848 [CommonNavigator] Using ShowIn in the Project Explorer results in some blue files bug 249876 [CommonNavigator] Make CNF tests tolerate non-pristine workspace

--- a/tests/org.eclipse.ui.tests.navigator/plugin.xml
+++ b/tests/org.eclipse.ui.tests.navigator/plugin.xml
@@ -340,22 +340,15 @@
             </actionExtension> 
          </includes>
       </viewerContentBinding>
-      
-      <!-- For testing -->
-      <viewerContentBinding viewerId="org.eclipse.ui.navigator.ProjectExplorer">
-         <includes>
-            <contentExtension pattern="org.eclipse.ui.tests.navigator.testContent"/> 
-            <contentExtension pattern="org.eclipse.ui.tests.navigator.filters.*"/> 
-         </includes>
-      </viewerContentBinding>
+
       <viewerActionBinding viewerId="org.eclipse.ui.tests.navigator.TestView">
          <includes>
             <actionExtension pattern="org.eclipse.ui.tests.navigator.extension.*"/>
-            <actionExtension pattern="org.eclipse.ui.navigator.resources.PropertiesActionProvider"/>
+            <actionExtension pattern="org.eclipse.ui.navigator.resources.*"/>
          </includes>
       </viewerActionBinding>
       <dragAssistant
-            class="org.eclipse.ui.navigator.resources.ResourceDragAdapterAssistant"
+            class="org.eclipse.ui.tests.navigator.extension.TestDragAssistant"
             viewerId="org.eclipse.ui.tests.navigator.TestView"/>
       <viewer
             viewerId="org.eclipse.ui.tests.navigator.HideAvailableExtensionsTestView">
@@ -366,7 +359,7 @@
          </options>
           <popupMenu
                 allowsPlatformContributions="true"
-                id="org.eclipse.ui.navigator.ProjectExplorer#PopupMenu"/>  
+                id="org.eclipse.ui.tests.navigator.TestView#PopupMenu"/>  
       </viewer>
       <viewerContentBinding viewerId="org.eclipse.ui.tests.navigator.HideAvailableExtensionsTestView">
           <includes>
