--- a/platform/org.eclipse.sdk/plugin.properties
+++ b/platform/org.eclipse.sdk/plugin.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2000, 2008 IBM Corporation and others.
+# Copyright (c) 2000, 2009 IBM Corporation and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -27,7 +27,8 @@ activity.java=Java Development
 activity.java.desc=Develop Java applications.
 activity.plugin=Plug-in Development
 activity.plugin.desc=Develop plug-ins, fragments, and features for Eclipse.
-
+activity.ant=Ant Development
+activity.ant.desc=Create and use Ant build scripts
 activity.team.cvs=CVS Support
 activity.team.cvs.desc=Use the Concurrent Versions System (CVS) to manage resources.
 activity.team=Core Team Support
