Bug 260426 Add an activity for Debug-related UI contributions

--- a/platform/org.eclipse.sdk/plugin.properties
+++ b/platform/org.eclipse.sdk/plugin.properties
@@ -70,3 +70,6 @@ introDescription-overview = The Eclipse software development kit is the developm
 introDescription-tutorials = Learn how to be productive using Eclipse by completing end-to-end tutorials that will guide you along the way.
 introDescription-samples = Explore Eclipse by installing prefabricated samples (may require an Internet connection).
 
+
+activity.debug.description = Launch applications, set breakpoints and step through code.
+activity.debug = Debug Support
