--- a/platform/org.eclipse.sdk/plugin.xml
+++ b/platform/org.eclipse.sdk/plugin.xml
@@ -65,11 +65,16 @@
             description="%activity.plugin.desc"
             id="org.eclipse.plugInDevelopment">
       </activity>
-      
       <activityRequirementBinding
             activityId="org.eclipse.plugInDevelopment"
             requiredActivityId="org.eclipse.javaDevelopment">
       </activityRequirementBinding>
+      <activity
+            description="%activity.debug.description"
+            id="org.eclipse.debugSupport"
+            name="%activity.debug">
+      </activity>
+      
   
       <activity
             name="%activity.team.cvs"
@@ -81,7 +86,7 @@
             name="%activity.team"
             description="%activity.team.desc"
             id="org.eclipse.team">
-      </activity> 
+      </activity>
       
       <activityRequirementBinding
             activityId="org.eclipse.team.cvs"
@@ -117,6 +122,10 @@
       <activityPatternBinding
             activityId="org.eclipse.plugInDevelopment"
             pattern="org\.eclipse\.pde/.*">
+      </activityPatternBinding>
+      <activityPatternBinding
+            activityId="org.eclipse.debugSupport"
+            pattern="org\.eclipse\.debug\.ui/.*">
       </activityPatternBinding>
       
       <activityPatternBinding
@@ -162,6 +171,10 @@
             activityId="org.eclipse.plugInDevelopment"
             categoryId="org.eclipse.categories.developmentCategory">
       </categoryActivityBinding>
+       <categoryActivityBinding
+             activityId="org.eclipse.debugSupport"
+             categoryId="org.eclipse.categories.developmentCategory">
+       </categoryActivityBinding>
 
       <categoryActivityBinding
             activityId="org.eclipse.team"
@@ -182,6 +195,9 @@
       <defaultEnablement
             id="org.eclipse.plugInDevelopment">
       </defaultEnablement>
+       <defaultEnablement
+             id="org.eclipse.debugSupport">
+       </defaultEnablement>
       
       <defaultEnablement
             id="org.eclipse.team">
