--- a/org.eclipse.debug.ui/ui/org/eclipse/debug/internal/ui/stringsubstitution/StringSubstitutionMessages.properties
+++ b/org.eclipse.debug.ui/ui/org/eclipse/debug/internal/ui/stringsubstitution/StringSubstitutionMessages.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2000, 2007 IBM Corporation and others.
+# Copyright (c) 2000, 2009 IBM Corporation and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -29,12 +29,9 @@ RefreshTab_42=Must select resources to refresh.
 RefreshTab_43=Refresh scope refers to non-existent resource {0}
 RefreshTab_44=Refresh scope invalid
 
-ResourceResolver_6=Variable references non-existent resource : {0}
-ResourceResolver_7=Variable references empty selection: {0}
-ResourceResolver_8=Variable not recognized: {0}
-
 ResourceSelector_0=Select Resource
 
+SelectedResourceResolver_0=Unable to resource a selected resource: {0}
 StringPromptExpander_0=Variable input
 
 StringVariableSelectionDialog_2=Select Variable
