--- a/org.eclipse.ui.editors/plugin.xml
+++ b/org.eclipse.ui.editors/plugin.xml
@@ -483,6 +483,16 @@
 	 	 </action>
 	  </actionSet>
    </extension>
+
+   <extension
+         point="org.eclipse.ui.actionSetPartAssociations">
+      <actionSetPartAssociation
+            targetID="org.eclipse.ui.edit.text.actionSet.presentation">
+         <part
+               id="org.eclipse.ui.DefaultTextEditor">
+         </part>
+      </actionSetPartAssociation>
+   </extension>
    
    <extension
          point="org.eclipse.ui.editors.markerAnnotationSpecification">
