Bug 230842 – [Help] new Toc(IToc ...) does not copy over the linkTo field:

--- a/org.eclipse.ua.tests/plugin.xml
+++ b/org.eclipse.ua.tests/plugin.xml
@@ -436,6 +436,9 @@
              leafIcon="icons/sample3.gif"
              openIcon="icons/sample.gif">
        </tocIcon>
+      <tocProvider
+            class="org.eclipse.ua.tests.help.toc.UaTestTocProvider">
+      </tocProvider>
    </extension>
 
    <extension point= "org.eclipse.help.contentExtension"> 
