--- a/org.eclipse.debug.ui/ui/org/eclipse/debug/internal/ui/views/launch/LaunchViewMessages.properties
+++ b/org.eclipse.debug.ui/ui/org/eclipse/debug/internal/ui/views/launch/LaunchViewMessages.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2000, 2007 IBM Corporation and others.
+# Copyright (c) 2000, 2009 IBM Corporation and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -7,7 +7,20 @@
 #
 # Contributors:
 #     IBM Corporation - initial API and implementation
+#     Pawel Piech - Wind River - adapted to use in Debug view
 ###############################################################################
 
 Breadcrumb_NoActiveContext=No Active Context
 breadcrumb_LabelPending=...
+
+LaunchView_ViewModeMenu_label=View Mode
+
+DebugViewModeAction_Auto_label=Automatic
+DebugViewModeAction_Auto_tooltip=Automatic
+DebugViewModeAction_Auto_description=Switch view mode automatically when the view is resized
+DebugViewModeAction_Full_label=Full
+DebugViewModeAction_Full_tooltip=Full
+DebugViewModeAction_Full_description=Always show the full viewer
+DebugViewModeAction_Compact_label=Compact
+DebugViewModeAction_Compact_tooltip=Compact
+DebugViewModeAction_Compact_description=Always show the compact viewer
