Bug 264796 - [TabbedProperties] HockeyLeagueExample needs EMF source code regenerated

--- a/examples/org.eclipse.ui.examples.views.properties.tabbed.hockeyleague/plugin.properties
+++ b/examples/org.eclipse.ui.examples.views.properties.tabbed.hockeyleague/plugin.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2006 IBM Corporation and others.
+# Copyright (c) 2006, 2009 IBM Corporation and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -125,20 +125,23 @@ _UI_OpenEditorError_label = Open Editor
 
 _UI_Wizard_category = Example EMF Model Creation Wizards
 
+_UI_CreateModelError_message = Problems encountered in file "{0}"
+
 _UI_HockeyleagueModelWizard_label = Hockeyleague Model
 _UI_HockeyleagueModelWizard_description = Create a new Hockeyleague model
 
 _UI_HockeyleagueEditor_label = Hockeyleague Model Editor
 
 _UI_HockeyleagueEditorFilenameDefaultBase = My
-_UI_HockeyleagueEditorFilenameExtension = org.eclipse.ui.examples.views.properties.tabbed.hockeyleague
+_UI_HockeyleagueEditorFilenameExtensions = hockeyleague
 
 _UI_Wizard_label = New
 
-_WARN_FilenameExtension = The file name must end in ".{0}"
+_WARN_FilenameExtension = The file name must end in ''.{0}''
+_WARN_FilenameExtensions = The file name must have one of the following extensions: {0}
 
-_UI_ModelObject = Model Object
-_UI_XMLEncoding = XML Encoding
+_UI_ModelObject = &Model Object
+_UI_XMLEncoding = &XML Encoding
 _UI_XMLEncodingChoices = UTF-8 ASCII UTF-16 UTF-16BE UTF-16LE ISO-8859-1
 _UI_Wizard_initial_object_description = Select a model object to create
 
