--- a/org.eclipse.debug.ui/ui/org/eclipse/debug/internal/ui/actions/ActionMessages.properties
+++ b/org.eclipse.debug.ui/ui/org/eclipse/debug/internal/ui/actions/ActionMessages.properties
@@ -207,3 +207,6 @@ VirtualFindAction_1=Unable to locate {0} in viewer
 
 ToggleBreakpointsTargetManager_defaultToggleTarget_name = Default
 ToggleBreakpointsTargetManager_defaultToggleTarget_description = Default
+
+NextThreadNavAction_name=Ne&xt Thread
+PreviousThreadNavAction_name=Pre&vious Thread
