Allow display of preferences from help about page

--- a/org.eclipse.help.webapp/src/org/eclipse/help/internal/webapp/WebappResources.properties
+++ b/org.eclipse.help.webapp/src/org/eclipse/help/internal/webapp/WebappResources.properties
@@ -162,3 +162,5 @@ version=Version
 pluginId=Plug-in Id
 aboutPlugins=About Plug-Ins
 userAgent=User Agent
+preferences=Preferences
+badPreferences=Unable to read preferences
