Bug 246875 - [About] allow for an extensible About dialog

--- a/bundles/org.eclipse.ui.ide/plugin.properties
+++ b/bundles/org.eclipse.ui.ide/plugin.properties
@@ -284,3 +284,9 @@ PreferenceTransfer.AllMarkersConfigurations.Description = All configurations set
 menu.mnemonic.0 = I
 menu.showIn.label = Show In
 menu.showIn.mnemonic = I
+
+installationPage.feature.name = Features
+command.installationPageColumns.mnemonic = C
+command.installationPageLicense.name = License
+command.installationPageLicense.mnemonic = L
+command.installationPageLicense.description = Open a browser on the license
