--- a/bundles/org.eclipse.ui/plugin.xml
+++ b/bundles/org.eclipse.ui/plugin.xml
@@ -2221,4 +2221,171 @@
             type="java.lang.Object">
       </propertyTester>
    </extension>
+        <extension
+         point="org.eclipse.ui.services">
+       <sourceProvider
+            provider="org.eclipse.ui.internal.about.InstallationDialogSourceProvider">
+         <variable
+               name="org.eclipse.ui.installationPage.activePage"
+               priorityLevel="activeContexts">
+         </variable>
+         <variable
+               name="org.eclipse.ui.installationPage.activePage.id"
+               priorityLevel="activeContexts">
+         </variable>        
+          <variable
+               name="org.eclipse.ui.installationPage.activePage.selection"
+               priorityLevel="activeContexts">
+         </variable>        
+         <variable
+               name="org.eclipse.ui.internal.about.activeProductDialogPage"
+               priorityLevel="activeContexts">
+         </variable>        
+         <variable
+               name="org.eclipse.ui.internal.about.activeProductDialogPageId"
+               priorityLevel="activeContexts">
+         </variable>        
+      </sourceProvider>
+   </extension>   
+   <extension
+         point="org.eclipse.ui.installationPages">
+          <page
+            name="%installationPage.plugins.name"
+            class="org.eclipse.ui.internal.about.AboutPluginsPage"
+            id="30.PluginPage">
+          </page>        
+          <page
+            name="%installationPage.system.name"
+            class="org.eclipse.ui.internal.about.AboutSystemPage"
+            id="31.SystemPage">
+          </page>
+     </extension>
+     <extension
+          point="org.eclipse.ui.commands">
+          <command
+            description="%command.installationPageColumns.description"
+            id="org.eclipse.ui.about.columns"
+            name="%command.installationPageColumns.name"
+            defaultHandler="org.eclipse.ui.internal.about.ConfigureColumnsHandler"/> 
+          <command
+            description="%command.installationPageOpenBrowser.description"
+            id="org.eclipse.ui.about.openBrowser"
+            name="%command.installationPageOpenBrowser.name"
+            defaultHandler="org.eclipse.ui.internal.about.OpenBrowserHandler"/> 
+          <command
+            description="%command.installationPageOpenBrowser.description"
+            id="org.eclipse.ui.about.pluginsDialog.openLegal"
+            name="%command.installationPageOpenBrowser.name"
+            defaultHandler="org.eclipse.ui.internal.about.OpenBrowserHandler"/> 
+          <command
+            description="%command.installationPageViewErrorLog.description"
+            id="org.eclipse.ui.about.viewErrorLog"
+            name="%command.installationPageViewErrorLog.name"
+            defaultHandler="org.eclipse.ui.internal.about.ViewErrorLogHandler"/> 
+	 </extension>          
+     <extension
+         point="org.eclipse.ui.menus">
+      <menuContribution
+            locationURI="toolbar:org.eclipse.ui.installationDialog.buttonbar">
+         <command
+               commandId="org.eclipse.ui.edit.copy"
+               style="push">
+            <visibleWhen>
+      			<with variable="org.eclipse.ui.installationPage.activePage.id">
+        			<equals value="31.SystemPage"/>
+      			</with>
+    		</visibleWhen>
+         </command>
+         <command
+               commandId="org.eclipse.ui.about.viewErrorLog"
+               mnemonic="%command.installationPageViewErrorLog.mnemonic"
+               style="push">
+            <visibleWhen>
+      			<with variable="org.eclipse.ui.installationPage.activePage.id">
+        			<equals value="31.SystemPage"/>
+      			</with>
+    		</visibleWhen>
+         </command>
+         <command
+               commandId="org.eclipse.ui.about.columns"
+               mnemonic="%command.installationPageColumns.mnemonic"
+               style="push">
+            <visibleWhen>
+      			<with variable="org.eclipse.ui.installationPage.activePage.id">
+        			<equals value="30.PluginPage"/>
+      			</with>
+    		</visibleWhen>
+         </command>
+         <command
+               commandId="org.eclipse.ui.about.openBrowser"
+               label="%command.installationPageLegalInfo.name"
+               mnemonic="%command.installationPageLegalInfo.mnemonic"
+               style="push">
+            <visibleWhen>
+      			<with variable="org.eclipse.ui.installationPage.activePage.id">
+        			<equals value="30.PluginPage"/>
+      			</with>
+    		</visibleWhen>
+         </command>
+      </menuContribution>    
+      <menuContribution
+            locationURI="toolbar:org.eclipse.ui.installationDialog.buttonbar.productInfo.plugins">
+          <command
+               commandId="org.eclipse.ui.about.columns"
+               mnemonic="%command.installationPageColumns.mnemonic"
+               style="push">
+         </command>
+         <command
+               commandId="org.eclipse.ui.about.pluginsDialog.openLegal"
+               label="%command.installationPageLegalInfo.name"
+               mnemonic="%command.installationPageLegalInfo.mnemonic"
+               style="push">
+         </command>
+      </menuContribution>    
+   </extension>
+     <extension
+         point="org.eclipse.ui.handlers">
+      <handler
+            class="org.eclipse.ui.internal.about.CopyHandler"
+            commandId="org.eclipse.ui.edit.copy">
+         <activeWhen>
+            <with
+                  variable="org.eclipse.ui.installationPage.activePage.id">
+               <equals value="31.SystemPage"/>
+            </with>
+         </activeWhen>
+      </handler>
+       <handler
+            class="org.eclipse.ui.internal.about.OpenBrowserHandler"
+            commandId="org.eclipse.ui.about.openBrowser">
+         <activeWhen>
+            <with
+                  variable="org.eclipse.ui.installationPage.activePage.id">
+               <equals value="30.PluginPage"/>
+            </with>
+         </activeWhen>
+        <enabledWhen>
+            <with
+                  variable="org.eclipse.ui.installationPage.activePage.selection">
+               <count value="1"/>
+            </with>
+         </enabledWhen>
+      </handler>
+      <handler
+            class="org.eclipse.ui.internal.about.OpenBrowserHandler"
+            commandId="org.eclipse.ui.about.pluginsDialog.openLegal">
+         <activeWhen>
+            <with
+                  variable="org.eclipse.ui.internal.about.activeProductDialogPageId">
+               <equals value="productInfo.plugins"/>
+            </with>
+          </activeWhen>
+        <enabledWhen>
+            <with
+                  variable="org.eclipse.ui.internal.about.activeProductDialogSelection">
+               <count value="1"/>
+            </with>
+         </enabledWhen>
+      </handler>     
+    </extension>
 </plugin>
