Use 'Toggle' for the command.

--- a/org.eclipse.ui.workbench.texteditor/plugin.properties
+++ b/org.eclipse.ui.workbench.texteditor/plugin.properties
@@ -33,9 +33,9 @@ showWhitespaceCharacters.description= Shows whitespace characters in current tex
 showInformation.name= Show Tooltip Description
 showInformation.description= Displays information for the current caret location in a sticky hover
 
-toggleBlockSelectionMode.label= Enable Block Selection
-toggleBlockSelectionMode.tooltip= Enable Block Selection
-toggleBlockSelectionMode.description= Enable block / column selection in the current text editor
+toggleBlockSelectionMode.label= Toggle Block Selection
+toggleBlockSelectionMode.tooltip= Toggle Block Selection
+toggleBlockSelectionMode.description= Toggle block / column selection in the current text editor
 
 smartEnter.label= Insert Line Below Current Line
 smartEnter.description= Adds a new line below the current line
