--- a/org.eclipse.help.webapp/plugin.properties
+++ b/org.eclipse.help.webapp/plugin.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2000, 2006 IBM Corporation and others.
+# Copyright (c) 2000, 2009 IBM Corporation and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -10,5 +10,4 @@
 ###############################################################################
 help_webapp_plugin_name = Help System Webapp
 providerName=Eclipse.org
-
-
+content_filter_extension_name = Content Filter
