--- a/org.eclipse.help.webapp/plugin.xml
+++ b/org.eclipse.help.webapp/plugin.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.0"?>
 <plugin>
-   <extension-point id="contentFilter" name="Content Filter" schema="schema/contentFilter.exsd"/>
+   <extension-point id="contentFilter" name="%content_filter_extension_name" schema="schema/contentFilter.exsd"/>
    <extension
          point="org.eclipse.equinox.http.registry.httpcontexts">
       <httpcontext
