--- a/org.eclipse.help.base/plugin.properties
+++ b/org.eclipse.help.base/plugin.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2000, 2006 IBM Corporation and others.
+# Copyright (c) 2000, 2009 IBM Corporation and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -25,3 +25,4 @@ defaultBrowser = Default Web Browser (Change in System Preferences)
 preferences = Help System Base Preferences
 
 search_participant_extension_point_name = Lucene Search Participant
+server_extension_point_name = Help Server
