Bug 260266 - Added a view preference to automatically expand elements in breadcrumb drop-down.

--- a/org.eclipse.debug.ui/ui/org/eclipse/debug/internal/ui/views/launch/LaunchViewMessages.properties
+++ b/org.eclipse.debug.ui/ui/org/eclipse/debug/internal/ui/views/launch/LaunchViewMessages.properties
@@ -24,3 +24,7 @@ DebugViewModeAction_Full_description=Always show the full viewer
 DebugViewModeAction_Compact_label=Compact
 DebugViewModeAction_Compact_tooltip=Compact
 DebugViewModeAction_Compact_description=Always show the compact viewer
+
+BreadcrumbDropDownAutoExpandAction_label=Auto-Expand Compact Selector
+BreadcrumbDropDownAutoExpandAction_tooltip=Auto-Expand Compact Selector
+BreadcrumbDropDownAutoExpandAction_description=In the compact mode selection viewer, automatically expand elements to reveal full selection in view.
