Bug 265784 - Preference service should protect against mis-behaving scope

--- a/tests/org.eclipse.core.tests.runtime/plugin.xml
+++ b/tests/org.eclipse.core.tests.runtime/plugin.xml
@@ -9,6 +9,9 @@
       <scope
             name="test"
             class="org.eclipse.core.tests.internal.preferences.TestScope"/>
+      <scope
+            name="badtest"
+            class="org.eclipse.core.tests.internal.preferences.BadTestScope"/>
    </extension>
    <extension
          point="org.eclipse.core.runtime.adapters">
